--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.8.10",
+    "@babel/core": "^7.17.9",
     "@sanity/client": "^3.2.0",
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.25.0",
@@ -20,8 +20,7 @@
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
-    "stripe": "^8.209.0",
-    "three": "^0.145.0"
+    "stripe": "^8.209.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
